# ancap-bot

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ancapbot.py  bicho.py  bot_ancap.py  config-template.ini  db.py  dev-requirements.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  users.sql
ancap_bot/: MANIFEST.in  __init__.py  __main__.py  bot.py  exceptions.py  settings.py
ancap_bot/cogs/: adm.py  basics.py  economy.py  gambling.py
ancap_bot/db/: __init__.py  db.py  models.py
ancap_bot/locale/en/LC_MESSAGES/: Ancap-Bot.po
ancap_bot/locale/pt_BR/LC_MESSAGES/: ancap_bot.po
cogs/: Adm.py  Basics.py  Economy.py  Gambling.py  Owner.py
data/: config-template.ini  config-template.json
db/: __init__.py  db.py  transaction.py
locale/: pt-br.patch  pt_BR.po
locale/en/LC_MESSAGES/: base.po
locales/pt_br/LC_MESSAGES/: messages.po
tests/: test_economy.py
