[metadata]
name = Ancap-Bot
description = An discord bot that simulates an ancap economy
author = Erogue Lord
author_email = debz1@protonmail.com
license = MIT
version = attr: ancap_bot.__version__
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Erogue-Lord/ancap-bot


[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiohttp==3.6.2
    async-timeout==3.0.1
    attrs==19.3.0
    chardet==3.0.4
    discord.py==1.4.1
    idna==2.10
    multidict==4.7.6
    python-dotenv==0.14.0
    SQLAlchemy==1.3.18
    websockets==8.1
    yarl==1.5.1

[options.extras_require]
postgres =
    psycopg2==2.8.5
dev =
    black==19.10b0
    attrs==19.3.0
    click==7.1.2
    regex==2020.7.14
    toml==0.10.1
    appdirs==1.4.4
    typed-ast==1.4.1
    pathspec==0.8.0
    pycodestyle==2.6.0
    pyflakes==2.2.0
    mccabe==0.6.1
    flake8==3.8.3

[options.entry_points]
console_scripts =
    ancap-bot=ancap_bot.__main__:main_cli

[options.package_data]
* =
    locales/*/LC_MESSAGES/*.po
    .env

[flake8]
max-line-length = 88
