[metadata]
name = ancap_bot
description = An discord bot that simulates an ancap economy
author = Erogue Lord
author_email = debz1@protonmail.com
license = MIT
version = attr: ancap_bot.__version__
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
url = https://github.com/Erogue-Lord/ancap-bot
zip_safe = false

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ancap-bot=ancap_bot.__main__:main_cli

[options.package_data]
ancap_bot =
    locales/*/LC_MESSAGES/*.mo

[flake8]
max-line-length = 88
builtins = _
